--- a/index.html
+++ b/index.html
@@ -7,23 +7,26 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="maincontainer">
-        <header>
-            <div class="navigation">
-                <div class="cloudo">
-                    <img src="./img/navigationlogo.svg" alt="navlogo">
-                    <a href="#">Cloudo</a>
+        <div class="headercontainer">
+            <header>
+                <div class="navigation">
+                    <div class="cloudo">
+                        <img src="./img/navigationlogo.svg" alt="navlogo">
+                        <a href="#">Cloudo</a>
+                    </div>
+                    <div class="menu">
+                        <a href="#" class="home">Home</a> 
+                        <a href="#">Inventory</a> 
+                        <a href="#">Support</a> 
+                        <a href="#">Guide</a>
+                    </div> 
+                    <img src="./img/navigationlogo2.svg" alt="#" class="humnan">
                 </div>
-                <div class="menu">
-                    <a href="#" class="home">Home</a> 
-                    <a href="#">Inventory</a> 
-                    <a href="#">Support</a> 
-                    <a href="#">Guide</a>
-                </div> 
-                <img src="./img/navigationlogo2.svg" alt="#" class="humnan">
-            </div>
-        </header>
+            </header>
+        </div>
+
         <main>
+        <div class="maincontainer"></div>
             <div class="content">
                 <div class="header">
                     <h1>Accelerate high-quality software development</h1>
